Update to Tycho 0.16.0 + Juno