@@ -15,29 +15,12 @@
 		<maven>3.0</maven>
 	</prerequisites>
 
-	<parent>
-		<groupId>org.sonatype.forge</groupId>
-		<artifactId>forge-parent</artifactId>
-		<version>10</version>
-	</parent>
-
 	<repositories>
-		<repository>
-			<id>rso</id>
-			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
-		</repository>
-
-		<repository>
-			<id>helios</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/indigo</url>
-		</repository>
-
-		<repository>
-			<id>m2e</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/technology/m2e/releases/1.0</url>
-		</repository>
+      <repository>
+        <id>juno</id>
+        <layout>p2</layout>
+        <url>http://download.eclipse.org/releases/juno</url>
+      </repository>
 	</repositories>
 
 	<properties>
@@ -134,8 +117,8 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>target-platform-configuration</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
 					<resolver>p2</resolver>
@@ -143,44 +126,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.sonatype.tycho</groupId>
-					<artifactId>maven-osgi-test-plugin</artifactId>
-					<version>${tycho-version}</version>
-					<configuration>
-						<useUIHarness>true</useUIHarness>
-						<includes>
-							<include>**/*Test.java</include>
-						</includes>
-						<argLine>${tycho.test.jvmArgs}</argLine>
-
-						<forkedProcessTimeoutInSeconds>900</forkedProcessTimeoutInSeconds>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>2.4.3</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
-
-	<!-- <profiles> <profile> <id>sun-jvm</id> <activation> <property> <name>java.vendor.url</name> 
-		<value>http://java.sun.com/</value> </property> </activation> <properties> 
-		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m</tycho.test.jvmArgs> </properties> 
-		</profile> <profile> <id>osx</id> <activation> <property> <name>java.vendor.url</name> 
-		<value>http://www.apple.com/</value> </property> </activation> <properties> 
-		<tycho.test.jvmArgs>-Xmx512m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.jvmArgs> 
-		<osgi.ws>cocoa</osgi.ws> </properties> </profile> <profile> <id>sign</id> 
-		<activation> <property> <name>jarsigner.alias</name> </property> </activation> 
-		<build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jarsigner-plugin</artifactId> 
-		<version>1.2</version> <executions> <execution> <id>sign</id> <goals> <goal>sign</goal> 
-		</goals> </execution> </executions> </plugin> </plugins> </build> </profile> 
-		</profiles> -->
-
 
 </project>
